Add to gmail reference

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 			<h1>Kemal Demirel</h1>
 			<span>Coming Soon...</span>
 			<div class="social">
-				<a href="https://vk.com/kemaldemirel" target="blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
-				<a href="https://github.com/demirelkemal" target="blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+				<a href="https://vk.com/kemaldemirel" target="blank" title="My page in VK"><i class="fa fa-vk" aria-hidden="true"></i></a>
+				<a href="https://github.com/demirelkemal" target="blank" title="My page in GitHub"><i class="fa fa-github" aria-hidden="true"></i></a>
+				<a href="mailto:demirelkd0696@gmail.com" target="blank" title="Mail"><i class="fa fa-google" aria-hidden="true"></i></a>
 			</div>
 			
 		</div>
