--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>kemaldemirel</title>
+	<title>Title</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,8 +16,6 @@
 	<link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="img/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="img/favicon/apple-touch-icon-114x114.png">
-	<link rel="stylesheet" href="css/Normalize.css">
-	
 
 	<!-- Chrome, Firefox OS and Opera -->
 	<meta name="theme-color" content="#000">
@@ -32,19 +30,78 @@
 
 <body>
 
-	<div class="wrapper">
-		<div class="wrapper-content">
-			<h1>Kemal Demirel</h1>
-			<span>Coming Soon...</span>
-			<div class="social">
-				<a href="https://vk.com/kemaldemirel" target="blank" title="My page in VK"><i class="fa fa-vk" aria-hidden="true"></i></a>
-				<a href="https://github.com/demirelkemal" target="blank" title="My page in GitHub"><i class="fa fa-github" aria-hidden="true"></i></a>
-				<a href="mailto:demirelkd0696@gmail.com" target="blank" title="Mail"><i class="fa fa-google" aria-hidden="true"></i></a>
-			</div>
-			
-		</div>
-	</div>
+	<div class="page-container">
+		<nav class="page-nav">
+			<ul class="page-nav__list">
+				<li><a href="#">Обо мне</a></li>
+				<li><a href="#">Портфолио</a></li>
+				<li><a href="#">Услуги</a></li>
+				<li><a href="#">Цены</a></li>
+				<li><a href="#">Контакты</a></li>
+			</ul>
+		</nav>
 	
+		<section class="profile">
+			<div class="profile__wrap">
+				<div class="ava">
+					<img src="img/uO5Lq_croper_ru.jpg" alt="Кемал Демирель">
+				</div>
+				<div class="profile__content">
+					<h1>Кемал Демирель</h1>
+					<span>Дизайнер / верстальщик</span>
+				</div>
+			</div>
+		</section>
+
+		<setion class="about-me">
+			<div class="skills">
+				<h2><i class="fa fa-caret-right" aria-hidden="true"></i>Профессиональные навыки</h2>
+				<div class="skills-bar">
+					<div class="skills-bar--offset">
+						<div class="skills-bar__title">
+							<span>html5 / css3</span>
+							<span>90%</span>
+						</div>
+						<div class="skills-bar-progress html">
+							<div class="skills-bar-progress__compled-html animate"></div>
+						</div>
+					</div>
+					<div class="skills-bar--offset">
+						<div class="skills-bar__title">
+							<span>JS / jQuery</span>
+							<span>65%</span>
+						</div>
+						<div class="skills-bar-progress js">
+							<div class="skills-bar-progress__compled-js animate"></div>
+						</div>
+					</div>
+					<div class="skills-bar--offset">
+						<div class="skills-bar__title">
+							<span>MODx / OpenCart / Jekyll</span>
+							<span>70%</span>
+						</div>
+						<div class="skills-bar-progress cms">
+							<div class="skills-bar-progress__compled-cms animate"></div>
+						</div>
+					</div>
+					<div class="skills-bar--offset">
+						<div class="skills-bar__title">
+							<span>Bootstrap</span>
+							<span>84%</span>
+						</div>
+						<div class="skills-bar-progress btsp">
+							<div class="skills-bar-progress__compled-btsp animate"></div>
+						</div>
+					</div>
+				</div>
+				</div>
+			<div class="skills">
+				<h2><i class="fa fa-caret-right" aria-hidden="true"></i>Обо мне</h2>
+			</div>
+		</setion>
+
+	</div>
+
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
 
