--- a/index.html
+++ b/index.html
@@ -32,13 +32,16 @@
 
 	<div class="page-container">
 		<nav class="page-nav">
-			<ul class="page-nav__list">
-				<li><a href="#">Обо мне</a></li>
-				<li><a href="#">Портфолио</a></li>
-				<li><a href="#">Услуги</a></li>
-				<li><a href="#">Цены</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
+			<button type="button" class="btn-menu">Меню</button>
+			<div class="page-nav__toggle">
+				<ul class="page-nav__list">
+					<li><a href="#">Обо мне</a></li>
+					<li><a href="#">Портфолио</a></li>
+					<li><a href="#">Услуги</a></li>
+					<li><a href="#">Цены</a></li>
+					<li><a href="#">Контакты</a></li>
+				</ul>
+			</div>
 		</nav>
 	
 		<section class="profile">
