--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 		<setion class="about-me">
 			<div class="skills">
-				<h2><i class="fa fa-caret-right" aria-hidden="true"></i>Профессиональные навыки</h2>
+				<h2 class="title-h2"><i class="fa fa-caret-right" aria-hidden="true"></i>Профессиональные навыки</h2>
 				<div class="skills-bar">
 					<div class="skills-bar--offset">
 						<div class="skills-bar__title">
@@ -98,8 +98,10 @@
 					</div>
 				</div>
 				</div>
-			<div class="skills">
-				<h2><i class="fa fa-caret-right" aria-hidden="true"></i>Обо мне</h2>
+			<div class="about-me__content">
+				<h2 class="title-h2"><i class="fa fa-caret-right" aria-hidden="true"></i>Обо мне</h2>
+				<p>Вервые веб-разработкой занялся еще в школе, в 2013 году. После ее окончания поступил в мед. колледж, где отучился на фармацевта. Затем, проработав им 2 года, понял, что это совсем не мое и вернуся к любимому делу</p>
+				<p>И вот уже напротяжении полутора лет благополучно реализовываю самые нестандарнтные идеи, задействовав широкий спектор технологий и инструментов. От прототипа дизайна до его продакшена.</p>
 			</div>
 		</setion>
 
