--- a/index.html
+++ b/index.html
@@ -105,6 +105,60 @@
 			</div>
 		</setion>
 
+		<section class="last-works">
+			<h2 class="title-h2"><i class="fa fa-caret-right" aria-hidden="true"></i>Последние работы</h2>
+			<div class="last-works__container">
+				<div class="last-works__items">
+					<img src="img/StockSnap_M6PZBBZKG9.jpg" alt="">
+					<div class="last-works__overlay">
+						<a href="#">Смотреть демо</a>
+						<h3>Салон красоты</h3>
+						<span>Верстка</span>
+					</div>
+				</div>
+				<div class="last-works__items">
+					<img src="img/TWU6VDFXFM.jpg" alt="">
+					<div class="last-works__overlay">
+						<a href="#">Смотреть демо</a>
+						<h3>Салон красоты</h3>
+						<span>Верстка</span>
+					</div>
+				</div>
+				<div class="last-works__items">
+					<img src="img/StockSnap_RFORUPXE7K.jpg" alt="">
+					<div class="last-works__overlay">
+						<a href="#">Смотреть демо</a>
+						<h3>Салон красоты</h3>
+						<span>Верстка</span>
+					</div>
+				</div>
+				<div class="last-works__items">
+					<img src="img/StockSnap_M6PZBBZKG9.jpg" alt="">
+					<div class="last-works__overlay">
+						<a href="#">Смотреть демо</a>
+						<h3>Салон красоты</h3>
+						<span>Верстка</span>
+					</div>
+				</div>
+				<div class="last-works__items">
+					<img src="img/TWU6VDFXFM.jpg" alt="">
+					<div class="last-works__overlay">
+						<a href="#">Смотреть демо</a>
+						<h3>Салон красоты</h3>
+						<span>Верстка</span>
+					</div>
+				</div>
+				<div class="last-works__items">
+					<img src="img/StockSnap_RFORUPXE7K.jpg" alt="">
+					<div class="last-works__overlay">
+						<a href="#">Смотреть демо</a>
+						<h3>Салон красоты</h3>
+						<span>Верстка</span>
+					</div>
+				</div>
+			</div>
+		</section>
+
 	</div>
 
 	<link rel="stylesheet" href="css/main.min.css">
