--- a/index.html
+++ b/index.html
@@ -105,6 +105,28 @@
 			</div>
 		</setion>
 
+		<section class="services">
+			<h2 class="title-h2"><i class="fa fa-caret-right" aria-hidden="true"></i>Услуги</h2>
+			<div class="services__wrap">
+				<div class="services__design">
+					<h3 class="title-h3">Разработка дизайна</h3>
+					<i class="fa fa-diamond" aria-hidden="true"></i>
+					<p class="services__desc">Индивидуальный стиль для каждого проекта. Прототипирование и прорисовка со всеми пожеланиями клиента.</p>
+				</div>
+				<div class="services__imposition">
+					<h3 class="title-h3">Верстка готового макета</h3>
+					<i class="fa fa-css3" aria-hidden="true"></i>
+					<p class="services__desc">Для тех, у кого уже есть готовый дизайн сайта. Верстка любой сложности с использованием современных технологий. Адаптивно и кроссбраузерно.</p>
+				</div>
+				<div class="services__sitekey">
+					<h3 class="title-h3">Сайт под ключ</h3>
+					<i class="fa fa-desktop" aria-hidden="true"></i>
+					<p class="services__desc">Fullstack разработка. От дизайна до размещения в интернете. <br> <b>Самый удобный вариант</b></p>
+				</div>
+			</div>
+		</section>
+
+
 		<section class="last-works">
 			<h2 class="title-h2"><i class="fa fa-caret-right" aria-hidden="true"></i>Последние работы</h2>
 			<div class="last-works__container">
